<resources>
    <string name="app_name">Car App</string>
    <string name="title">Car Details</string>
    <string name="refresh_btn">Refresh Button</string>
    <string name="quote_placeholder">Random Quote&#8230;</string>
    <string name="CountryTitle">Country</string>
    <string name="CommonNameTitle">CommonName</string>
    <string name="IdTitle">ID</string>
    <string name="NameTitle">Name</string>
    <string name="AppName">CAR\nAPP</string>
    <string name="VehicleTypesHeading">VehicleTypes</string>
    <string name="UserName">Username</string>
    <string name="PasswordHint">Password</string>
    <string name="Fname">First Name</string>
    <string name="Lname">Last Name</string>
    <string name="Email">Email id</string>
    <string name="Gender">Gender</string>
    <string name="SubmitButton">Submit</string>
    <string name="LoginHeading">User Login</string>
</resources>