<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/rounded_corners"
    android:gravity="center"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_24dp"
    android:layout_margin="@dimen/spacing_24dp"
    tools:context=".view.LoginFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginHeading"
        android:fontFamily="@font/login_font"
        android:textSize="24sp"
        android:layout_margin="@dimen/spacing_16dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/UserName"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/PasswordHint"/>
    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_8dp"
        android:text="@string/SubmitButton"/>
    <TextView
        android:id="@+id/error_in_validation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_16dp"
        android:textSize="18sp"
        android:text=""
        android:textColor="#F00"/>
</LinearLayout>