<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/spacing_24dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ProfileScreenFragment"
    android:orientation="vertical"
    android:background="@drawable/rounded_corners">
<de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/account_image"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:layout_margin="@dimen/spacing_16dp"
    app:civ_border_color="@color/transparent_black"
    app:civ_border_width="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/spacing_8dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/UserName"/>
        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/spacing_8dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/Fname"/>
        <TextView
            android:id="@+id/first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/spacing_8dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="1"
            android:text="@string/Lname"/>
        <TextView
            android:id="@+id/last_name"
            android:layout_width="0dp"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/spacing_8dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/Email"/>
        <TextView
            android:id="@+id/email_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_weight="2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/spacing_8dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/Gender"/>
        <TextView
            android:id="@+id/gender"
            android:layout_width="0dp"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>
</LinearLayout>