<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.FragmentOne">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/transparent_black"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_weight="10"
                android:layout_height="100dp">
                <TextView
                    android:id="@+id/quote_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="3dp"
                    android:fontFamily="@font/cookie_regular"
                    android:hint="@string/quote_placeholder"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25dp"></TextView>
            </ScrollView>
            <ImageButton
                android:id="@+id/refresh_button"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/transparent"
                android:src="@drawable/refresh_btn"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"></ImageButton>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@color/transparent_white"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <TextView
                    android:text="@string/CountryTitle"
                    android:layout_width="0dp"
                    android:layout_marginStart="3dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"></TextView>
                <TextView
                    android:text="@string/CommonNameTitle"
                    android:textSize="16dp"
                    android:layout_width="0dp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"></TextView>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
